# ocr

ocr-server/: pyproject.toml
ocr-server/boards/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
ocr-server/config/: settings.py  urls.py
ocr-server/static/style/: grid.css
ocr-server/templates/: index.html
ocr-server/users/: admin.py  models.py  serializers.py  urls.py  views.py
